test/fixtures/public/fail/semantic/array_access_is_on_array.jmm
/*  REASON:
    array access on non arrays

    ESTE TESTE FOI FEITO PELO MIGUEL
*/

class T {
    public static void main(String[] a) {
        int b;
        b[0] = 0;
    }
}
